2023-06-01 0.23
  * fixed wrong database entry for special files (type)
  * fixed database patterns: * and empty
  * bar-index: fixed wrong counted lost entries without
    fragments
  * BARControl: added option --info
  * BARControl: fixed list directory entries on insufficient
    permission

2023-04-16 0.22g
  * BARControl: fixed update job sate in dry-mode (issue #2,
    thanks to ChrisTG742)
  * fixed error handling WebDAV access
  * fixed test run on Jenkins

2023-03-11 0.22f
  * fixed error message: no space left on device
  * improved find storage files: skip unreadable directories
  * bar-index: fixed remove duplicate storages
  * bar-index: fixed MariaDB functions
  * bar-index: fixed option --tmp-directory
  * bar-index: improved tests
  * BARControl: fixed edit serve maintenance time (locale)
  * BARControl: fixed update file lists
  * BARControl: fixed update restore dialog

2023-01-15 0.22e
  * fixed PostgreSQL memory consumption: use single
    row mode
  * fixed memory leak

2022-12-25 0.22d
  * fixed memory leak in PostgreSQL API call
  * add missing lock slave list
  * fixed valgrind warning
  * fixed format error messages with arguments
  * fixed format some log lines
  * fixed full-text-search matching for SQLite
  * fixed SQLite database locking when new storage
    is inserted
  * fixed configuration issue handling: report as
    error
  * fixed memory leak in --transform

2022-11-15 0.22c
  * fixed trigger pairing thread
  * fixed memory leaks

2022-11-06 0.22b
  * fixed slave mode: avoid reading local jobs
  * fixed typing error when deleting entries in index
  * fixed warnings
  * improved timeout messages
  * fixed print configuration error messages
  * fixed reading keys/certificates: after configuration
  * fixed write multiple configuration values
  * removed some debug code
  * BARControl: fixed update TLS state

2022-10-31 0.22a
  * disabled TLS port by default (TLS also work on
    standard port)